--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+	display: flex;
+}
+.carousel-caption {
+	position: absolute;
+	top: 0;
+}
+
+.carousel-caption h2 p {
+	color: #fff;
+}
+
+.carousel img {
+	height: 300px;
+	padding: 50px;
+	margin: 40px;
+	margin-left: auto;
+	margin-right: auto;
+}
